Modified the download links for other books

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 	<details>
 		<summary>O'Reilly - Book Series</summary>
 		<ul>
-			<li><a href = "O'Reilly Series/AngularJS - Up and Running.pdf" download>AngularJS - Up and Running</a></li>
-			<li><a href = "O'Reilly Series/Java 5 Pocket Guide.pdf" download>Java 5 Pocket Guide</a></li>
-			<li><a href = "O'Reilly Series/Java 8 Lambdas.pdf" download>Java 8 Lambdas</a></li>
-			<li><a href = "O'Reilly Series/Java 8 Pocket Guide.pdf" download>Java 8 Pocket Guide</a></li>
-			<li><a href = "O'Reilly Series/Java Cookbook, 3rd Edition.pdf" download>Java Cookbook, 3rd Edition</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/AngularJS%20-%20Up%20and%20Running.pdf" download>AngularJS - Up and Running</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/Java%205%20Pocket%20Guide.pdf" download>Java 5 Pocket Guide</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/Java%208%20Lambdas.pdf" download>Java 8 Lambdas</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/Java%208%20Pocket%20Guide.pdf" download>Java 8 Pocket Guide</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/Java%20Cookbook%2C%203rd%20Edition.pdf" download>Java Cookbook, 3rd Edition</a></li>
 			<li><a href = "O'Reilly Series/Java in a Nutshell, 6th Edition.pdf" download>Java in a Nutshell, 6th Edition</a></li>
 			<li><a href = "O'Reilly Series/Java Message Service.pdf" download>Java Message Service</a></li>
 			<li><a href = "O'Reilly Series/Java Performance - The Definitive Guide.pdf" download>Java Performance- The Definitive Guide</a></li>
@@ -64,9 +64,9 @@
 	<details>
 		<summary>Other Book Series</summary>
 		<ul>
-			<li><a href = "Others/Java Collections - Software Engineering.pdf" download>Java Collections - Software Engineering</a></li>
-			<li><a href = "Others/Java Collections Framework.pdf" download>Java Collections Framework</a></li>
-			<li><a href = "Others/Wrox Java Programming Interviews Exposed Feb 2014.pdf" download>Wrox Java Programming Interviews Exposed Feb 2014</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/Others/Java%20Collections%20-%20Software%20Engineering.pdf" download>Java Collections - Software Engineering</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/Others/Java%20Collections%20Framework.pdf" download>Java Collections Framework</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/Others/Wrox%20Java%20Programming%20Interviews%20Exposed%20Feb%202014.pdf" download>Wrox Java Programming Interviews Exposed Feb 2014</a></li>
 		</ul>
 	</details>
 
