Modified the download links for O'Reilly books

--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
 			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/Java%208%20Lambdas.pdf" download>Java 8 Lambdas</a></li>
 			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/Java%208%20Pocket%20Guide.pdf" download>Java 8 Pocket Guide</a></li>
 			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/Java%20Cookbook%2C%203rd%20Edition.pdf" download>Java Cookbook, 3rd Edition</a></li>
-			<li><a href = "O'Reilly Series/Java in a Nutshell, 6th Edition.pdf" download>Java in a Nutshell, 6th Edition</a></li>
-			<li><a href = "O'Reilly Series/Java Message Service.pdf" download>Java Message Service</a></li>
-			<li><a href = "O'Reilly Series/Java Performance - The Definitive Guide.pdf" download>Java Performance- The Definitive Guide</a></li>
-			<li><a href = "O'Reilly Series/Java Server Pages.pdf" download>Java Server Pages</a></li>
-			<li><a href = "O'Reilly Series/Java Web Services.pdf" download>Java Web Services</a></li>
-			<li><a href = "O'Reilly Series/Just Hibernate.pdf" download>Just Hibernate</a></li>
-			<li><a href = "O'Reilly Series/Just Spring Data Access.pdf" download>Just Spring Data Access</a></li>
-			<li><a href = "O'Reilly Series/Just Spring Integration.pdf" download>Just Spring Integration</a></li>
-			<li><a href = "O'Reilly Series/Just Spring.pdf" download>Just Spring</a></li>
-			<li><a href = "O'Reilly Series/Learning Java, 4th Edition.pdf" download>Learning Java, 4th Edition</a></li>
-			<li><a href = "O'Reilly Series/Programming JavaScript Applications.pdf" download>Programming JavaScript Applications</a></li>
-			<li><a href = "O'Reilly Series/Regular Expression Pocket Reference, 2nd Edition.pdf" download>Regular Expression Pocket Reference, 2nd Edition</a></li>
-			<li><a href = "O'Reilly Series/RESTful Web Services.pdf" download>RESTful Web Services</a></li>
-			<li><a href = "O'Reilly Series/Spring Data.pdf" download>Spring Data</a></li>
-			<li><a href = "O'Reilly Series/XML Pocket Reference, 3rd Edition.pdf" download>XML Pocket Reference, 3rd Edition</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/Java%20in%20a%20Nutshell%2C%206th%20Edition.pdf" download>Java in a Nutshell, 6th Edition</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/Java%20Message%20Service.pdf" download>Java Message Service</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/Java%20Performance-%20The%20Definitive%20Guide.pdf" download>Java Performance- The Definitive Guide</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/Java%20Server%20Pages.pdf" download>Java Server Pages</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/Java%20Web%20Services.pdf" download>Java Web Services</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/Just%20Hibernate.pdf" download>Just Hibernate</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/Just%20Spring%20Data%20Access.pdf" download>Just Spring Data Access</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/Just%20Spring%20Integration.pdf" download>Just Spring Integration</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/Just%20Spring.pdf" download>Just Spring</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/Learning%20Java%2C%204th%20Edition.pdf" download>Learning Java, 4th Edition</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/Programming%20JavaScript%20Applications.pdf" download>Programming JavaScript Applications</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/Regular%20Expression%20Pocket%20Reference%2C%202nd%20Edition.pdf" download>Regular Expression Pocket Reference, 2nd Edition</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/RESTful%20Web%20Services.pdf" download>RESTful Web Services</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/Spring%20Data.pdf" download>Spring Data</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/O'Reilly%20Series/XML%20Pocket%20Reference%2C%203rd%20Edition.pdf" download>XML Pocket Reference, 3rd Edition</a></li>
 		</ul>
 	</details>
 
