Added details to the page

--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 	</script>
 </head>
 <body>
-	<h3 id='heading'>Here's a set of study materials used</h3>
-
-	<hr />
-
+	<h1 id='heading'>Here's a set of study materials used</h1>
+	<b>
+		Expand individual sections for download links
+		<hr />
+	</b>
 	<details>
 		<summary>In Action - Book Series</summary>
 		<ul>
