Added the Favicon

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
 	<title>Study Materials</title>
+	<link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
 </head>
 <body>
 	<h3>Here's a set of study materials used</h3>
+
+	<hr />
 </body>
 </html>
