Added Some download links

--- a/index.html
+++ b/index.html
@@ -2,11 +2,33 @@
 <html>
 <head>
 	<title>Study Materials</title>
-	<link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
+	<link rel='icon' href='https://raw.githubusercontent.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/master/favicon.ico' />
 </head>
 <body>
 	<h3>Here's a set of study materials used</h3>
 
 	<hr />
+
+	<details>
+		<summary>In Action - Book Series</summary>
+		<ul>
+			<li><a href = "In Action Series/ActiveMQ in Action.pdf" download>ActiveMQ in Action</a></li>
+			<li><a href = "In Action Series/Android in Action, 3rd Edition.pdf" download>Android in Action, 3rd Edition</a></li>
+		</ul>
+	</details>
+
+	<details>
+		<summary>O'Reilly - Book Series</summary>
+		<ul>
+			<li></li>
+		</ul>
+	</details>
+
+	<details>
+		<summary>Other Book Series</summary>
+		<ul>
+			<li></li>
+		</ul>
+	</details>
 </body>
 </html>
