Added the remaining download links

--- a/index.html
+++ b/index.html
@@ -14,21 +14,64 @@
 		<ul>
 			<li><a href = "In Action Series/ActiveMQ in Action.pdf" download>ActiveMQ in Action</a></li>
 			<li><a href = "In Action Series/Android in Action, 3rd Edition.pdf" download>Android in Action, 3rd Edition</a></li>
+			<li><a href = "In Action Series/Ant in Action - 2nd Edition.pdf" download>Ant in Action - 2nd Edition</a></li>
+			<li><a href = "In Action Series/EJB 3 in Action - 2nd Edition.pdf" download>EJB 3 in Action - 2nd Edition</a></li>
+			<li><a href = "In Action Series/Ext JS in Action - 2nd Edition.pdf" download>Ext JS in Action - 2nd Edition</a></li>
+			<li><a href = "In Action Series/HTML5 in Action.pdf" download>HTML5 in Action</a></li>
+			<li><a href = "In Action Series/Java 8 in Action.pdf" download>Java 8 in Action</a></li>
+			<li><a href = "In Action Series/JavaServer Faces in Action.pdf" download>JavaServer Faces in Action</a></li>
+			<li><a href = "In Action Series/JSTL in Action.pdf" download>JSTL in Action</a></li>
+			<li><a href = "In Action Series/JUnit in Action - 1st Edition.pdf" download>JUnit in Action - 1st Edition</a></li>
+			<li><a href = "In Action Series/JUnit in Action - 2nd Edition.pdf" download>JUnit in Action - 2nd Edition</a></li>
+			<li><a href = "In Action Series/MongoDB in Action.pdf" download>MongoDB in Action</a></li>
+			<li><a href = "In Action Series/SonarQube in Action.pdf" download>SonarQube in Action</a></li>
+			<li><a href = "In Action Series/Spring Dynamic Modules in Action.pdf" download>Spring Dynamic Modules in Action</a></li>
+			<li><a href = "In Action Series/Spring in Action - 2nd Edition.pdf" download>Spring in Action - 2nd Edition</a></li>
+			<li><a href = "In Action Series/Spring in Action - 3rd Edition.pdf" download>Spring in Action - 3rd Edition</a></li>
+			<li><a href = "In Action Series/Spring Integration in Action.pdf" download>Spring Integration in Action</a></li>
+			<li><a href = "In Action Series/Struts 1 in Action.pdf" download>Struts 1 in Action</a></li>
+			<li><a href = "In Action Series/Struts 2 in Action.pdf" download>Struts 2 in Action</a></li>
+			<li><a href = "In Action Series/Wicket in Action.pdf" download>Wicket in Action</a></li>
 		</ul>
 	</details>
 
 	<details>
 		<summary>O'Reilly - Book Series</summary>
 		<ul>
-			<li></li>
+			<li><a href = "O'Reilly Series/AngularJS - Up and Running.pdf" download>AngularJS - Up and Running</a></li>
+			<li><a href = "O'Reilly Series/Java 5 Pocket Guide.pdf" download>Java 5 Pocket Guide</a></li>
+			<li><a href = "O'Reilly Series/Java 8 Lambdas.pdf" download>Java 8 Lambdas</a></li>
+			<li><a href = "O'Reilly Series/Java 8 Pocket Guide.pdf" download>Java 8 Pocket Guide</a></li>
+			<li><a href = "O'Reilly Series/Java Cookbook, 3rd Edition.pdf" download>Java Cookbook, 3rd Edition</a></li>
+			<li><a href = "O'Reilly Series/Java in a Nutshell, 6th Edition.pdf" download>Java in a Nutshell, 6th Edition</a></li>
+			<li><a href = "O'Reilly Series/Java Message Service.pdf" download>Java Message Service</a></li>
+			<li><a href = "O'Reilly Series/Java Performance - The Definitive Guide.pdf" download>Java Performance- The Definitive Guide</a></li>
+			<li><a href = "O'Reilly Series/Java Server Pages.pdf" download>Java Server Pages</a></li>
+			<li><a href = "O'Reilly Series/Java Web Services.pdf" download>Java Web Services</a></li>
+			<li><a href = "O'Reilly Series/Just Hibernate.pdf" download>Just Hibernate</a></li>
+			<li><a href = "O'Reilly Series/Just Spring Data Access.pdf" download>Just Spring Data Access</a></li>
+			<li><a href = "O'Reilly Series/Just Spring Integration.pdf" download>Just Spring Integration</a></li>
+			<li><a href = "O'Reilly Series/Just Spring.pdf" download>Just Spring</a></li>
+			<li><a href = "O'Reilly Series/Learning Java, 4th Edition.pdf" download>Learning Java, 4th Edition</a></li>
+			<li><a href = "O'Reilly Series/Programming JavaScript Applications.pdf" download>Programming JavaScript Applications</a></li>
+			<li><a href = "O'Reilly Series/Regular Expression Pocket Reference, 2nd Edition.pdf" download>Regular Expression Pocket Reference, 2nd Edition</a></li>
+			<li><a href = "O'Reilly Series/RESTful Web Services.pdf" download>RESTful Web Services</a></li>
+			<li><a href = "O'Reilly Series/Spring Data.pdf" download>Spring Data</a></li>
+			<li><a href = "O'Reilly Series/XML Pocket Reference, 3rd Edition.pdf" download>XML Pocket Reference, 3rd Edition</a></li>
 		</ul>
 	</details>
 
 	<details>
 		<summary>Other Book Series</summary>
 		<ul>
-			<li></li>
+			<li><a href = "Others/Java Collections - Software Engineering.pdf" download>Java Collections - Software Engineering</a></li>
+			<li><a href = "Others/Java Collections Framework.pdf" download>Java Collections Framework</a></li>
+			<li><a href = "Others/Wrox Java Programming Interviews Exposed Feb 2014.pdf" download>Wrox Java Programming Interviews Exposed Feb 2014</a></li>
 		</ul>
 	</details>
+
+	<hr />
+
+	<i> Report for any broken links. </i>
 </body>
 </html>
