Modified the remaining download links

--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
 	<details>
 		<summary>In Action - Book Series</summary>
 		<ul>
-			<li><a href = "In Action Series/ActiveMQ in Action.pdf" download>ActiveMQ in Action</a></li>
-			<li><a href = "In Action Series/Android in Action, 3rd Edition.pdf" download>Android in Action, 3rd Edition</a></li>
-			<li><a href = "In Action Series/Ant in Action - 2nd Edition.pdf" download>Ant in Action - 2nd Edition</a></li>
-			<li><a href = "In Action Series/EJB 3 in Action - 2nd Edition.pdf" download>EJB 3 in Action - 2nd Edition</a></li>
-			<li><a href = "In Action Series/Ext JS in Action - 2nd Edition.pdf" download>Ext JS in Action - 2nd Edition</a></li>
-			<li><a href = "In Action Series/HTML5 in Action.pdf" download>HTML5 in Action</a></li>
-			<li><a href = "In Action Series/Java 8 in Action.pdf" download>Java 8 in Action</a></li>
-			<li><a href = "In Action Series/JavaServer Faces in Action.pdf" download>JavaServer Faces in Action</a></li>
-			<li><a href = "In Action Series/JSTL in Action.pdf" download>JSTL in Action</a></li>
-			<li><a href = "In Action Series/JUnit in Action - 1st Edition.pdf" download>JUnit in Action - 1st Edition</a></li>
-			<li><a href = "In Action Series/JUnit in Action - 2nd Edition.pdf" download>JUnit in Action - 2nd Edition</a></li>
-			<li><a href = "In Action Series/MongoDB in Action.pdf" download>MongoDB in Action</a></li>
-			<li><a href = "In Action Series/SonarQube in Action.pdf" download>SonarQube in Action</a></li>
-			<li><a href = "In Action Series/Spring Dynamic Modules in Action.pdf" download>Spring Dynamic Modules in Action</a></li>
-			<li><a href = "In Action Series/Spring in Action - 2nd Edition.pdf" download>Spring in Action - 2nd Edition</a></li>
-			<li><a href = "In Action Series/Spring in Action - 3rd Edition.pdf" download>Spring in Action - 3rd Edition</a></li>
-			<li><a href = "In Action Series/Spring Integration in Action.pdf" download>Spring Integration in Action</a></li>
-			<li><a href = "In Action Series/Struts 1 in Action.pdf" download>Struts 1 in Action</a></li>
-			<li><a href = "In Action Series/Struts 2 in Action.pdf" download>Struts 2 in Action</a></li>
-			<li><a href = "In Action Series/Wicket in Action.pdf" download>Wicket in Action</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/In%20Action%20Series/ActiveMQ%20in%20Action.pdf" download>ActiveMQ in Action</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/In%20Action%20Series/Android%20in%20Action%2C%203rd%20Edition.pdf" download>Android in Action, 3rd Edition</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/In%20Action%20Series/Ant%20in%20Action%20-%202nd%20Edition.pdf" download>Ant in Action - 2nd Edition</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/In%20Action%20Series/EJB%203%20in%20Action%20-%202nd%20Edition.pdf" download>EJB 3 in Action - 2nd Edition</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/In%20Action%20Series/Ext%20JS%20in%20Action%20-%202nd%20Edition.pdf" download>Ext JS in Action - 2nd Edition</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/In%20Action%20Series/HTML5%20in%20Action.pdf" download>HTML5 in Action</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/In%20Action%20Series/Java%208%20in%20Action.pdf" download>Java 8 in Action</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/In%20Action%20Series/JavaServer%20Faces%20in%20Action.pdf" download>JavaServer Faces in Action</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/In%20Action%20Series/JUnit%20in%20Action%20-%201st%20Edition.pdf" download>JSTL in Action</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/In%20Action%20Series/JUnit%20in%20Action%20-%201st%20Edition.pdf" download>JUnit in Action - 1st Edition</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/In%20Action%20Series/JUnit%20in%20Action%20-%202nd%20Edition.pdf" download>JUnit in Action - 2nd Edition</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/In%20Action%20Series/MongoDB%20in%20Action.pdf" download>MongoDB in Action</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/In%20Action%20Series/SonarQube%20in%20Action.pdf" download>SonarQube in Action</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/In%20Action%20Series/Spring%20Dynamic%20Modules%20in%20Action.pdf" download>Spring Dynamic Modules in Action</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/In%20Action%20Series/Spring%20in%20Action%20-%202nd%20Edition.pdf" download>Spring in Action - 2nd Edition</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/In%20Action%20Series/Spring%20in%20Action%20-%203rd%20Edition.pdf" download>Spring in Action - 3rd Edition</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/In%20Action%20Series/Spring%20Integration%20in%20Action.pdf" download>Spring Integration in Action</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/In%20Action%20Series/Struts%201%20in%20Action.pdf" download>Struts 1 in Action</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/In%20Action%20Series/Struts%202%20in%20Action.pdf" download>Struts 2 in Action</a></li>
+			<li><a href = "https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/raw/master/Books/In%20Action%20Series/Wicket%20in%20Action.pdf" download>Wicket in Action</a></li>
 		</ul>
 	</details>
 
