Defined default scaling for all devices

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Study Materials</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel='icon' href='https://raw.githubusercontent.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/master/favicon.ico' />
 	
 	<style type="text/css">
@@ -99,7 +100,7 @@
 				</td>
 				<td width="10%"></td>
 				<td align="center">
-					<span style="font-family: Tahoma; font-size: large; ">Change Back-Ground</span> 
+					<span style="font-family: Tahoma; font-size: medium; ">Change Back-Ground</span> 
 					<br />
 					<table width="100%" cellspacing="10px;">
 						<th>
