--- a/index.html
+++ b/index.html
@@ -100,10 +100,12 @@
 		<table width="100%" >
 			<thead>
 				<tr>
-					<td width="70%">
-						<h1 id='heading'>Here's a set of study materials used</h1>
+					<td width="10%">
+						<img src='books.svg' alt='Study Materials' />
 					</td>
-					<td width="10%"></td>
+					<td width="70%">
+						<h1 id='heading'>Time to study and Re-Skill yourself</h1>
+					</td>
 					<td align="center">
 						<span style="font-family: Tahoma; font-size: medium; ">Change Back-Ground</span> 
 						<br />
@@ -124,8 +126,9 @@
 		</table>
 	</header>
 	<hr class="fancy"/>
+	<br />
 	<b>
-		Expand individual sections for download links
+		Below are a set of study materials used. Expand individual sections for download links
 		<br /><hr />
 	</b>
 	<details>
