Renamed the header !

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						<img src='https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/blob/development/books.svg' alt='Study Materials' />
 					</td>
 					<td width="70%">
-						<h1 id='heading'>Time to study and Re-Skill yourself</h1>
+						<h1 id='heading'>It's time to Study and Re-Skill yourself</h1>
 					</td>
 					<td align="center">
 						<span style="font-family: Tahoma; font-size: medium; ">Change Back-Ground</span> 
