Reverted the image path back to the relative value

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			<thead>
 				<tr>
 					<td width="10%">
-						<img src='https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/blob/development/books.svg' alt='Study Materials' />
+						<img src='books.svg' alt='Study Materials' />
 					</td>
 					<td width="70%">
 						<h1 id='heading'>It's time to Study and Re-Skill yourself</h1>
