--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 
 			listItem.appendChild(a);
 			listItem.removeAttribute('value');
+			listItem
 		}
 
 		function getURLs(listItem) {
@@ -103,13 +104,16 @@
 					<td width="10%">
 						<img src='books.svg' alt='Study Materials' />
 					</td>
-					<td width="70%">
-						<h1 id='heading'>It's time to Study and Re-Skill yourself</h1>
+					<td width="60%">
+						<h1 id='heading'>
+							It's time to Study and Re-Skill yourself</h1>
 					</td>
-					<td align="center">
+				</tr>
+				<tr>
+					<td align="right" colspan="2">
 						<span style="font-family: Tahoma; font-size: medium; ">Change Back-Ground</span> 
 						<br />
-						<table width="100%" cellspacing="10px;">
+						<table width="50%" cellspacing="10px;">
 							<th>
 								<tr>
 									<td class='selector' style="background-color: #F7CD91;" onclick="javascript: changeBgColor(this); "><br /></td>
