Adjusted the image width

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 	<header>
 		<table width="100%">
 			<tr>
-				<td rowspan="2" valign="middle"><img src='books.svg' alt='Study Materials' /></td>
+				<td rowspan="2" valign="middle" width="13.5%"><img src='books.svg' alt='Study Materials' /></td>
 				<td colspan="1"><h1 id='heading'>It's time to Study and Re-Skill yourself</h1></td>
 			</tr>
 			<tr>
