--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			border-width: thin;
 			width: 20%;
 		}
-		
+
 	</style>
 
 	<script type="text/javascript">
@@ -38,6 +38,7 @@
 		window.onload = function() {
 			loadHyperLinks();
 			cleanUp();
+			activateSnow();
 		}
 
 		setInterval(function () {
