--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
 			<li value='IA|JUnit in Action - 2nd Edition' class="bookItem" />
 			<li value='IA|MongoDB in Action' class="bookItem" />
 			<li value='IA|NodeJS in Action' class="bookItem" />
+			<li value='IA|React in Action' class='bookItem' />
 			<li value='IA|SonarQube in Action' class="bookItem" />
 			<li value='IA|Spring Boot in Action' class="bookItem" />
 			<li value='IA|Spring Dynamic Modules in Action' class="bookItem" />
