Updated the mark-up for the new eBooks added

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
 			<li value='IA|Ant in Action - 2nd Edition' class="bookItem" />
 			<li value='IA|EJB 3 in Action - 2nd Edition' class="bookItem" />
 			<li value='IA|Ext JS in Action - 2nd Edition' class="bookItem" />
+			<li value='IA|Hibernate in Action' class="bookItem" />
 			<li value='IA|HTML5 in Action' class="bookItem" />
 			<li value='IA|Java 8 in Action' class="bookItem" />
 			<li value='IA|JavaServer Faces in Action' class="bookItem" />
@@ -204,6 +205,7 @@
 		<ul>
 			<li value='OT|Java Collections - Software Engineering' class="bookItem" />
 			<li value='OT|Java Collections Framework' class="bookItem" />
+			<li value='OT|Learning VueJS' class="bookItem" />
 			<li value='OT|Wrox Java Programming Interviews Exposed Feb 2014' class="bookItem" />
 		</ul>
 	</details>
