--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 			<li value='IA|Modern Java in Action' class="bookItem" />
 			<li value='IA|MongoDB in Action' class="bookItem" />
 			<li value='IA|NodeJS in Action' class="bookItem" />
-			<li value='IA|React in Action' class='bookItem' />
+			<li value='IA|React in Action' class="bookItem" />
 			<li value='IA|SonarQube in Action' class="bookItem" />
 			<li value='IA|Spring Boot in Action' class="bookItem" />
 			<li value='IA|Spring Dynamic Modules in Action' class="bookItem" />
