Added campaign label

--- a/index.html
+++ b/index.html
@@ -213,9 +213,21 @@
 
 	<hr />
 	<footer>
-		<i> 
-			Report for any broken links <a href="https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/issues" target='blank'>here</a>  or just <a href="mailto:vignesh87.srkv@gmail.com">mail me</a> with the details. 
-		</i>
+		<table width="100%">
+			<tr>
+				<td>
+					<i> 
+						Report for any broken links <a href="https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/issues" target='blank'>here</a>  or just <a href="mailto:vignesh87.srkv@gmail.com">mail me</a> with the details. 
+					</i>
+				</td>
+				<td style="float: right;">
+						<a href="https://francescocirillo.com/pages/anti-if-campaign">
+							<img height="60" width="120"
+							src="https://cdn.shopify.com/s/files/1/0257/1675/t/152/assets/banner_ive-joined.gif?7291"
+							alt="I have joined Anti-IF Campaign"></a>
+				</td>
+			</tr>
+		</table>
 	</footer>
 </body>
 </html>
