Aligned the footer

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 	<footer>
 		<table width="100%">
 			<tr>
-				<td>
+				<td style="float: left;">
 					<i> 
 						Report for any broken links <a href="https://github.com/Vignesh-Durairaj/Vignesh-Durairaj.github.io/issues" target='blank'>here</a>  or just <a href="mailto:vignesh87.srkv@gmail.com">mail me</a> with the details. 
 					</i>
